objects/JBCXM__SurveyUserAnswer__c.object
<CustomObject>
    <description>This is used to store participants response</description>
    <fields>
        <fullName>JBCXM__AnswerText__c</fullName>
        <label>Answer Text</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Answer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Answer</label>
        <referenceTo>JBCXM__SurveyAllowedAnswers__c</referenceTo>
        <relationshipLabel>Survey User Answers</relationshipLabel>
        <relationshipName>Answer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Participant__c</fullName>
        <label>Participant</label>
        <referenceTo>JBCXM__SurveyParticipant__c</referenceTo>
        <relationshipLabel>Survey User Answers</relationshipLabel>
        <relationshipName>Participant</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>JBCXM__SurveyQuestion__c</referenceTo>
        <relationshipLabel>Survey User Answers</relationshipLabel>
        <relationshipName>Question</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__RankText__c</fullName>
        <label>RankText</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Rank__c</fullName>
        <label>Rank</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__SubmissionTime__c</fullName>
        <label>Submission Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JBCXM__SurveyMaster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Master</label>
        <referenceTo>JBCXM__Survey__c</referenceTo>
        <relationshipLabel>SurveyMaster</relationshipLabel>
        <relationshipName>Master</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey User Answer</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>JBCXM__Answer__c</columns>
        <columns>JBCXM__AnswerText__c</columns>
        <columns>JBCXM__Participant__c</columns>
        <columns>JBCXM__Question__c</columns>
        <columns>JBCXM__Rank__c</columns>
        <columns>JBCXM__SubmissionTime__c</columns>
        <columns>JBCXM__SurveyMaster__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>JBCXM__My_New_view</fullName>
        <columns>NAME</columns>
        <columns>JBCXM__Answer__c</columns>
        <columns>JBCXM__AnswerText__c</columns>
        <columns>JBCXM__Participant__c</columns>
        <columns>JBCXM__Question__c</columns>
        <columns>JBCXM__Rank__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>JBCXM__Answer__c</field>
            <operation>contains</operation>
            <value>SuT-0284</value>
        </filters>
        <label>My New view</label>
    </listViews>
    <nameField>
        <displayFormat>SuR-{0000}</displayFormat>
        <label>Survey User Answer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey User Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>